# AdventOfCode2024

./: .gitignore  Cargo.toml  justfile
daily-template/: Cargo.toml
daily-template/src/: part1.rs  part2.rs
day-1/: Cargo.toml
day-1/benches/: benchmarks.rs
day-1/src/: lib.rs  part1.rs  part2.rs
day-10/: Cargo.toml
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/src/: lib.rs  part1.rs  part2.rs
day-2/: Cargo.toml
day-2/src/: lib.rs  part1.rs  part2.rs
day-3/: Cargo.toml
day-3/benches/: benchmarks.rs
day-3/src/: lib.rs  part1.rs  part2.rs
day-4/: Cargo.toml
day-4/benches/: benchmarks.rs
day-4/src/: lib.rs  part1.rs  part2.rs
day-5/: Cargo.toml
day-5/benches/: benchmarks.rs
day-5/src/: part1.rs  part2.rs
day-6/: Cargo.toml
day-6/benches/: benchmarks.rs
day-6/src/: lib.rs  part1.rs  part2.rs
day-7/: Cargo.toml
day-7/benches/: benchmarks.rs
day-7/src/: part1.rs  part2.rs
day-9/: Cargo.toml
day-9/src/: lib.rs  part1.rs  part2.rs
