[workspace]
resolver = "2"

members = ["day-*"]

[workspace.dependencies]
regex = "1.10"
itertools = "0.13"
rayon = "1.8"
glam = "0.29"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
criterion = { version = "0.5", features = ["html_reports"] }
ahash = "0.8"

[profile.flamegraph]
inherits = "release"
debug = true
