[profile.flamegraph]
debug = 2
inherits = "release"

[workspace]
members = [
    "day-*",
    "day-9",
]
resolver = "2"

[workspace.dependencies]
ahash = "0.8"
glam = "0.29"
itertools = "0.13"
rayon = "1.8"
regex = "1.10"
rstest = "0.23.0"
rstest_reuse = "0.7.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.dependencies.criterion]
version = "0.5"
features = ["html_reports"]
