[package]
name = "day-1"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustc-hash = "2.1"

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "day-1-bench"
path = "benches/benchmarks.rs"
harness = false
