[package]
name = "day-2"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ahash = { workspace = true }
tinyvec = "1.8"

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "day-2-bench"
path = "benches/benchmarks.rs"
harness = false
