[package]
name = "day-6"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ahash = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "day-6-bench"
path = "benches/benchmarks.rs"
harness = false
